ajustes no fetch e nas telas index e eventos

--- a/editar-evento.html
+++ b/editar-evento.html
@@ -13,7 +13,6 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="./js/editar-evento.js"></script>
   </head>
 
   <body>
@@ -73,6 +72,15 @@
                 />
               </div>
               <div class="mb-3">
+                <label for="banner" class="form-label">Banner</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="banner"
+                  aria-describedby="banner"
+                />
+              </div>
+              <div class="mb-3">
                 <label for="atracoes" class="form-label">Atrações</label>
                 <input
                   type="text"
@@ -123,5 +131,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/editar-evento.js"></script>
   </body>
 </html>
