--- a/excluir-evento.html
+++ b/excluir-evento.html
@@ -13,7 +13,6 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="./js/excluir-evento.js"></script>
   </head>
 
   <body>
@@ -72,6 +71,15 @@
                   aria-describedby="nome"
                   value=""
                   disabled
+                />
+              </div>
+              <div class="mb-3">
+                <label for="banner" class="form-label">Banner</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="banner"
+                  aria-describedby="banner"
                 />
               </div>
               <div class="mb-3">
@@ -135,5 +143,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/excluir-evento.js"></script>
   </body>
 </html>
