adição da pagina reservas e do modal

--- a/eventos.html
+++ b/eventos.html
@@ -31,6 +31,51 @@
         ></div>
       </section>
 
+      <!--modal -->
+      <div id="telaModal" id_evento class="modal">
+        <div class="modal-content">
+          <span id="closeBtn" class="close">&times;</span>
+          <p>
+            Para reservar seu ingresso neste evento, preencha os campos abaixo
+            com seus dados!
+          </p>
+          <form class="col-6" id="create-event-form">
+            <div class="mb-3">
+              <label for="nome" class="form-label">Nome</label>
+              <input
+                type="text"
+                class="form-control"
+                id="nome"
+                aria-describedby="nome"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Seu email</label>
+              <input
+                type="text"
+                class="form-control"
+                id="email"
+                aria-describedby="email"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label"
+                >Quantidade de Ingressos</label
+              >
+              <input
+                type="number"
+                class="form-control"
+                id="qtdIngresso"
+                aria-describedby="number"
+              />
+            </div>
+            <br />
+            <button type="submit" class="btn btn-primary">enviar</button>
+          </form>
+        </div>
+      </div>
+      <!-- Fim do modal-->
+
       <section
         class="full d-flex justify-content-center align-items-center"
         style="background-color: #f2f2f2; color: #555"
