--- a/excluir-evento.html
+++ b/excluir-evento.html
@@ -80,6 +80,7 @@
                   class="form-control"
                   id="banner"
                   aria-describedby="banner"
+                  disabled
                 />
               </div>
               <div class="mb-3">
