ajustes para subir no github pages

--- a/admin.html
+++ b/admin.html
@@ -28,7 +28,7 @@
             </svg>
             <span class="fs-4 px-5">
               <img
-                src="img/Sound-logo.png"
+                src="./img/Sound-logo.png"
                 alt="Gama Lounge"
                 class="img-responsive"
               />
@@ -50,7 +50,7 @@
               <a href="#" class="nav-link link-dark"> Usuários </a>
             </li>
             <li>
-              <a href="index.html" class="nav-link link-dark"> Landing Page </a>
+              <a href="./index.html" class="nav-link link-dark"> Landing Page </a>
             </li>
           </ul>
           <hr />
@@ -59,7 +59,7 @@
           <div class="my-5">
             <h1>Gerenciamento de eventos</h1>
 
-            <a href="cadastro-evento.html" class="btn btn-primary"
+            <a href="./cadastro-evento.html" class="btn btn-primary"
               >Novo Evento</a
             >
           </div>
