--- a/eventos.html
+++ b/eventos.html
@@ -126,10 +126,10 @@
         <nav>
           <ul>
             <li>
-              <a href="eventos.html">eventos</a>
+              <a href="./eventos.html">eventos</a>
             </li>
             <li>
-              <a href="admin.html">painel administrativo</a>
+              <a href="./admin.html">painel administrativo</a>
             </li>
           </ul>
         </nav>
