--- a/reservas.html
+++ b/reservas.html
@@ -21,7 +21,7 @@
       <div class="row">
         <aside class="d-flex flex-column flex-shrink-0 p-3 bg-light col-2">
           <a
-            href="index.html"
+            href="./index.html"
             class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
           >
             <svg class="bi me-2" width="40" height="32">
@@ -39,7 +39,7 @@
           <hr />
           <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item">
-              <a href="admin.html" class="nav-link active" aria-current="page">
+              <a href="./admin.html" class="nav-link active" aria-current="page">
                 Eventos
               </a>
             </li>
@@ -51,7 +51,7 @@
               <a href="#" class="nav-link link-dark"> Usuários </a>
             </li>
             <li>
-              <a href="index.html" class="nav-link link-dark"> Landing Page </a>
+              <a href="./index.html" class="nav-link link-dark"> Landing Page </a>
             </li>
           </ul>
           <hr />
