--- a/excluir-evento.html
+++ b/excluir-evento.html
@@ -50,7 +50,7 @@
               <a href="#" class="nav-link link-dark"> Usuários </a>
             </li>
             <li>
-              <a href="index.html" class="nav-link link-dark"> Landing Page </a>
+              <a href="./index.html" class="nav-link link-dark"> Landing Page </a>
             </li>
           </ul>
           <hr />
