--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
     <title>Sound Garden</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
+      rel="stylesheet" crossorigin="anonymous"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
-    <header class="d-flex justify-content-center align-items-center">
+    <header class="cabecalho">
       <img src="./img/Sound-logo (1).png" width="300" alt="" />
     </header>
     <main>
-      <section
-        class="full d-flex justify-content-center align-items-center"
+      <!-- Section alterada para funcionamento do banner rotativo -->
+      <section class="section01"
         style="background-color: #f8bbd0; color: #fff"
       >
-        <div class="text-center">
-          <h1>Adicione um banner maneiro aqui</h1>
-        </div>
+          <div class="containerBanner" width="100%" height="100%" >
+            <img src="./js/imagensBanner/img-1.jpg" id="imagemBanner" alt="Banner" width="100%" height="100%"/>
+            </div>  
       </section>
+
       <section class="full">
         <div class="container text-center">
           <h2>Próximos eventos</h2>
@@ -148,5 +148,6 @@
       </div>
     </footer>
     <script src="./js/index.js"></script>
+    <script src="./js/banner-rotativo.js"></script>
   </body>
 </html>
