Adequações no HTML

--- a/eventos.html
+++ b/eventos.html
@@ -26,7 +26,7 @@
           <h2>Todos os Eventos</h2>
         </div>
         <div
-          class="container d-flex justify-content-center align-items-center flex-wrap"
+          class="containerTelaEventos"
           id="container-evento"
         ></div>
       </section>
