--- a/index.html
+++ b/index.html
@@ -5,123 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sound Garden</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet" crossorigin="anonymous"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-
   <body>
     <header class="cabecalho">
       <img src="./img/Sound-logo (1).png" width="300" alt="" />
     </header>
     <main>
       <!-- Section alterada para funcionamento do banner rotativo -->
-      <section class="section01"
-        style="background-color: #f8bbd0; color: #fff"
-      >
-          <div class="containerBanner" width="100%" height="100%" >
-            <img src="./js/imagensBanner/img-1.jpg" id="imagemBanner" alt="Banner" width="100%" height="100%"/>
-            </div>  
+      <section class="section01" style="background-color: #f8bbd0; color: #fff">
+        <div class="containerBanner" width="100%" height="100%">
+          <img src="./js/imagensBanner/img-1.jpg" id="imagemBanner" alt="Banner" width="100%" height="100%" />
+        </div>
       </section>
-
-      <section class="full">
-        <div class="container text-center">
+      <section class="section02">
+        <div class="sectio02Titulo">
           <h2>Próximos eventos</h2>
         </div>
-
-        <div
-          class="container d-flex justify-content-center align-items-center"
-          id="container-evento"
-        ></div>
-
-        <!--modal -->
-        <div id="telaModal" id_evento class="modal">
-          <div class="modal-content">
-            <span id="closeBtn" class="close">&times;</span>
-            <p>
-              Para reservar seu ingresso neste evento, preencha os campos abaixo
-              com seus dados!
-            </p>
-            <form class="col-6" id="create-event-form">
-              <div class="mb-3">
-                <label for="nome" class="form-label">Nome</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="nome"
-                  aria-describedby="nome"
-                />
-              </div>
-              <div class="mb-3">
-                <label for="email" class="form-label">Seu email</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="email"
-                  aria-describedby="email"
-                />
-              </div>
-              <div class="mb-3">
-                <label for="email" class="form-label"
-                  >Quantidade de Ingressos</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  id="qtdIngresso"
-                  aria-describedby="number"
-                />
-              </div>
-              <br />
-              <button type="submit" class="btn btn-primary">enviar</button>
-            </form>
-          </div>
+        <div class="containerEventos" id="container-evento"></div>
+        <div class="sectio02Button">
+          <a href="./eventos.html" class="btn btn-secondary">ver todos os eventos</a>
         </div>
-        <!-- Fim do modal-->
-
-        <div class="container text-center">
-          <a href="./eventos.html" class="btn btn-secondary"
-            >ver todos os eventos</a
-          >
-        </div>
+    
       </section>
-      <section
-        class="full d-flex justify-content-center align-items-center"
-        style="background-color: #f2f2f2; color: #555"
-      >
-        <div class="container">
+      <section class="section03" style="background-color: #f2f2f2; color: #555">
+        <div class="containerSobre">
           <div class="row d-flex justify-content-center align-items-center">
             <div class="col">
               <h2>A Sound Garden</h2>
-
               <p>Sound Garden é uma casa de show super descolada</p>
-
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id
-                autem, fugiat recusandae, totam inventore harum iste libero
-                obcaecati neque fugit ipsam. Dolorum quae quis odio rem at eum
-                cumque excepturi.
-              </p>
-              <p>
-                Alias animi nostrum aperiam sapiente laudantium corporis esse
-                voluptatem, repellendus nam exercitationem reprehenderit error.
-                Maiores quibusdam molestias adipisci magni maxime explicabo
-                voluptatibus ipsum delectus, cum soluta esse ab ducimus.
-                Molestias facilis hic quod similique, voluptate porro architecto
-                itaque odit dolore temporibus, dignissimos magni delectus in?
-              </p>
-              <p>
-                Nemo excepturi soluta provident minima amet? Architecto
-                distinctio molestiae nisi necessitatibus nesciunt possimus
-                dignissimos consequatur iusto cupiditate quam accusantium
-                tempora odio at deleniti explicabo voluptatum blanditiis natus
-                qui, dolorem ea eius minima itaque aspernatur? Quia voluptatem
-                ex, mollitia consequuntur quas incidunt, aliquid explicabo
-                nesciunt hic nobis libero velit at reiciendis.
-              </p>
+              <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id autem, fugiat recusandae, totam inventore harum iste libero obcaecati neque fugit ipsam. Dolorum quae quis odio rem at eum cumque excepturi. </p>
+              <p> Alias animi nostrum aperiam sapiente laudantium corporis esse voluptatem, repellendus nam exercitationem reprehenderit error. Maiores quibusdam molestias adipisci magni maxime explicabo voluptatibus ipsum delectus, cum soluta esse ab ducimus. Molestias facilis hic quod similique, voluptate porro architecto itaque odit dolore temporibus, dignissimos magni delectus in? </p>
+              <p> Nemo excepturi soluta provident minima amet? Architecto distinctio molestiae nisi necessitatibus nesciunt possimus dignissimos consequatur iusto cupiditate quam accusantium tempora odio at deleniti explicabo voluptatum blanditiis natus qui, dolorem ea eius minima itaque aspernatur? Quia voluptatem ex, mollitia consequuntur quas incidunt, aliquid explicabo nesciunt hic nobis libero velit at reiciendis. </p>
             </div>
             <div class="col">
               <img src="./img/music.svg" width="500px" />
@@ -129,6 +45,30 @@
           </div>
         </div>
       </section>
+          <!--modal -->
+          <div id="telaModal" id_evento class="modal">
+            <div class="modal-content">
+              <span id="closeBtn" class="close">&times;</span>
+              <p> Para reservar seu ingresso neste evento, preencha os campos abaixo com seus dados! </p>
+              <form class="col-6" id="create-event-form">
+                <div class="mb-3">
+                  <label for="nome" class="form-label">Nome</label>
+                  <input type="text" class="form-control" id="nome" aria-describedby="nome" />
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">Seu email</label>
+                  <input type="text" class="form-control" id="email" aria-describedby="email" />
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">Quantidade de Ingressos</label>
+                  <input type="number" class="form-control" id="qtdIngresso" aria-describedby="number" />
+                </div>
+                <br />
+                <button type="submit" class="btn btn-primary">enviar</button>
+              </form>
+            </div>
+          </div>
+          <!-- Fim do modal-->
     </main>
     <footer>
       <div class="container d-flex justify-content-center align-items-center">
